iptables.rules
# Generated by iptables-save v1.8.7 on Fri Jan 21 03:40:46 2022
*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
-A INPUT -p udp -m udp --sport 53 -m u32 --u32 "0x0&0xf000000=0x5000000&&0x16&0xffff@0x10=0xf9812e30" -j DROP
-A INPUT -p udp -m udp --sport 53 -m u32 --u32 "0x0&0xf000000=0x5000000&&0x16&0xffff@0x10=0xf3b9bb27,0x1759053c,0x31027b38,0x364c8701,0x4d04075c,0x76053106,0xbc050460,0xbda31105,0xc504040c,0xfd9d0ea5" -j DROP
-A INPUT -p udp -m udp --sport 53 -m u32 --u32 "0x0&0xf000000=0x5000000&&0x16&0xffff@0x10=0xcf0c5862,0xd0381f2b,0xd1913632,0xd1dc1eae,0xd1244921,0xd35e4293,0xd5a9fb23,0xd8ddbcb6,0xd8eab30d,0xf3b9bb03" -j DROP
-A INPUT -p udp -m udp --sport 53 -m u32 --u32 "0x0&0xf000000=0x5000000&&0x16&0xffff@0x10=0x4e10310f,0x5d2e0859,0x80797e8b,0x9f6a794b,0xa9840d67,0xc043c606,0xca6a0102,0xcab50755,0xcba1e6ab,0xcb620741" -j DROP
-A INPUT -p udp -m udp --sport 53 -m u32 --u32 "0x0&0xf000000=0x5000000&&0x16&0xffff@0x10=0x2e52ae44,0x3b1803ad,0x402158a1,0x4021632f,0x4042a3fb,0x4168cafc,0x41a0db71,0x422dfced,0x480ecd68,0x480ecd63" -j DROP
-A INPUT -p udp -m udp --sport 53 -m u32 --u32 "0x0&0xf000000=0x5000000&&0x16&0xffff@0x10=0x1010101,0xffffffff,0x4a7d7f66,0x4a7d9b66,0x4a7d2766,0x4a7d2771,0xd155e58a,0x42442b2,0x807c62d,0x253d369e" -j DROP
-A FORWARD -p udp -m udp --sport 53 -m u32 --u32 "0x0&0xf000000=0x5000000&&0x16&0xffff@0x10=0xf9812e30" -j DROP
-A FORWARD -p udp -m udp --sport 53 -m u32 --u32 "0x0&0xf000000=0x5000000&&0x16&0xffff@0x10=0xf3b9bb27,0x1759053c,0x31027b38,0x364c8701,0x4d04075c,0x76053106,0xbc050460,0xbda31105,0xc504040c,0xfd9d0ea5" -j DROP
-A FORWARD -p udp -m udp --sport 53 -m u32 --u32 "0x0&0xf000000=0x5000000&&0x16&0xffff@0x10=0xcf0c5862,0xd0381f2b,0xd1913632,0xd1dc1eae,0xd1244921,0xd35e4293,0xd5a9fb23,0xd8ddbcb6,0xd8eab30d,0xf3b9bb03" -j DROP
-A FORWARD -p udp -m udp --sport 53 -m u32 --u32 "0x0&0xf000000=0x5000000&&0x16&0xffff@0x10=0x4e10310f,0x5d2e0859,0x80797e8b,0x9f6a794b,0xa9840d67,0xc043c606,0xca6a0102,0xcab50755,0xcba1e6ab,0xcb620741" -j DROP
-A FORWARD -p udp -m udp --sport 53 -m u32 --u32 "0x0&0xf000000=0x5000000&&0x16&0xffff@0x10=0x2e52ae44,0x3b1803ad,0x402158a1,0x4021632f,0x4042a3fb,0x4168cafc,0x41a0db71,0x422dfced,0x480ecd68,0x480ecd63" -j DROP
-A FORWARD -p udp -m udp --sport 53 -m u32 --u32 "0x0&0xf000000=0x5000000&&0x16&0xffff@0x10=0x1010101,0xffffffff,0x4a7d7f66,0x4a7d9b66,0x4a7d2766,0x4a7d2771,0xd155e58a,0x42442b2,0x807c62d,0x253d369e" -j DROP
COMMIT
# Completed on Fri Jan 21 03:40:46 2022
